@@ -21,22 +21,22 @@ use_ok('English');
 use_ok('File::Basename');
 can_ok( 'File::Basename', 'dirname' );
 
-use_ok('Nagios::Plugin');
-can_ok( 'Nagios::Plugin', 'new' );
-can_ok( 'Nagios::Plugin', 'nagios_exit' );
-can_ok( 'Nagios::Plugin', 'add_perfdata' );
+use_ok('Monitoring::Plugin');
+can_ok( 'Monitoring::Plugin', 'new' );
+can_ok( 'Monitoring::Plugin', 'nagios_exit' );
+can_ok( 'Monitoring::Plugin', 'add_perfdata' );
 
-use_ok('Nagios::Plugin::Range');
-can_ok( 'Nagios::Plugin::Range', 'parse_range_string' );
+use_ok('Monitoring::Plugin::Range');
+can_ok( 'Monitoring::Plugin::Range', 'parse_range_string' );
 
-use_ok('Nagios::Plugin::Getopt');
-can_ok( 'Nagios::Plugin::Getopt', 'new' );
-can_ok( 'Nagios::Plugin::Getopt', 'arg' );
-can_ok( 'Nagios::Plugin::Getopt', 'getopts' );
-can_ok( 'Nagios::Plugin::Getopt', 'get' );
+use_ok('Monitoring::Plugin::Getopt');
+can_ok( 'Monitoring::Plugin::Getopt', 'new' );
+can_ok( 'Monitoring::Plugin::Getopt', 'arg' );
+can_ok( 'Monitoring::Plugin::Getopt', 'getopts' );
+can_ok( 'Monitoring::Plugin::Getopt', 'get' );
 
-use_ok('Nagios::Plugin::Threshold');
-can_ok( 'Nagios::Plugin::Threshold', 'new' );
-can_ok( 'Nagios::Plugin::Threshold', 'set_thresholds' );
+use_ok('Monitoring::Plugin::Threshold');
+can_ok( 'Monitoring::Plugin::Threshold', 'new' );
+can_ok( 'Monitoring::Plugin::Threshold', 'set_thresholds' );
 
 use_ok('Readonly');
